--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -39,7 +39,6 @@
   line-height: 1.5em;
   position: relative;
   width: 100%;
-  /* height: 100%; */
 }
 
 .box h2 {
@@ -63,6 +62,7 @@
   background-color: #ffffff;
   position: relative;
   z-index: 1;
+  transition: 0.5s ease-in-out;
 }
 
 .abt {
@@ -88,11 +88,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 0.5em;
 }
-.skillbtn:hover {
-  background-color: black;
-  color: white;
-  cursor: pointer;
-}
+
 .grid-item {
   transition: all 0.3s ease;
   position: relative;
@@ -118,13 +114,78 @@
   background-color: white;
 }
 .carouselCont {
-  display: none;
+  display: block;
 }
-
+.certCont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .skillCont {
   width: 100%;
   position: relative;
   bottom: 0;
   display: flex;
   justify-content: center;
+}
+
+/* Expt grid */
+
+.grid {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+
+  position: relative;
+  bottom: -3em;
+}
+
+.button-container {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(70, 70, 70, 0.7);
+  backdrop-filter: blur(15px);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  z-index: 2;
+  pointer-events: none;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.1s ease-in-out, transform 0.5s ease-in-out;
+  border-radius: 15px;
+}
+
+.overlay.visible {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.overlaymain {
+  text-align: center;
+}
+
+.heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.overlayContent {
+  font-size: 1rem;
+}
+.skillbtn:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(15px);
+  color: white;
 }
