--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -49,7 +49,8 @@
   font-size: 2.25em;
 }
 .skillbtn {
-  border: 3px solid black;
+  border: 2px solid #00000020;
+  /* box-shadow: 0 0 0 2px #00000020; */
   padding: 16px 5px;
   font-size: 0.6em;
   border-radius: 20px;
@@ -61,8 +62,8 @@
   font-weight: 600;
   background-color: #ffffff;
   position: relative;
-  z-index: 1;
-  transition: 0.5s ease-in-out;
+  z-index: 0;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .abt {
@@ -110,7 +111,6 @@
   top: 5em;
   left: 0;
   right: 0;
-  z-index: 10;
   background-color: white;
 }
 .carouselCont {
@@ -136,7 +136,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
-
+  padding: 0.25em;
   position: relative;
   bottom: -3em;
 }
@@ -152,23 +152,25 @@
   width: 100%;
   height: 100%;
   background-color: rgba(70, 70, 70, 0.7);
-  backdrop-filter: blur(15px);
+  box-shadow: 0 0 0 3px #00000020;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1rem;
-  z-index: 2;
+  /* z-index: 1; */
   pointer-events: none;
   opacity: 0;
   transform: scale(0);
-  transition: opacity 0.1s ease-in-out, transform 0.5s ease-in-out;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out,
+    backdrop-filter 0.5s ease-in-out;
   border-radius: 15px;
 }
 
 .overlay.visible {
   opacity: 1;
   transform: scale(1);
+  backdrop-filter: blur(15px);
 }
 
 .overlaymain {
@@ -185,7 +187,7 @@
   font-size: 1rem;
 }
 .skillbtn:hover {
-  background-color: rgba(0, 0, 0, 0.7);
-  backdrop-filter: blur(15px);
+  background-color: rgb(57, 57, 57);
+  backdrop-filter: blur(12px);
   color: white;
 }
