--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -6,9 +6,12 @@
   font-size: 24px;
   font-weight: bold;
   gap: 1em;
+  min-height: 100svh;
+  padding: 5em 0;
 }
 .box {
   width: 625px;
+  height: fit-content;
   color: white;
   border: 1px solid white;
   font-size: 90%;
