--- a/src/styles/hoverpage.css
+++ b/src/styles/hoverpage.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100svh;
+  min-height: 100svh;
   font-size: 3.5em;
   font-weight: bold;
 }
