--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -25,7 +25,7 @@ nav {
 }
 nav a {
   height: 100%;
-  padding: 0 20px;
+  margin: 0 20px;
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -77,6 +77,10 @@ nav .logo {
 }
 
 .fancy:hover::after {
+  transform: scaleX(1);
+  background-color: #ffffff;
+}
+.fancy.active::after {
   transform: scaleX(1);
   background-color: #ffffff;
 }
