--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -25,7 +25,7 @@
 .g1 {
   grid-column: 1 / 1;
   grid-row: 3 /25;
-  background-image: url("../images/udemy.jpg");
+  background-image: url("../images/security_image.png");
   background-size: 100% 100%;
 }
 .g2 {
