--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -11,7 +11,7 @@
 }
 .box {
   width: 625px;
-  height: fit-content;
+  /* height: fit-content; */
   color: white;
   border: 1px solid white;
   font-size: 90%;
@@ -21,12 +21,14 @@
   justify-content: center;
   border-radius: 20px;
   position: relative;
+  max-height: 804px;
 }
 
 .skills {
   background-color: #ffffff;
   color: black;
   height: 60%;
+  max-height: 468px;
   justify-content: flex-start;
 }
 .cert {
@@ -34,6 +36,7 @@
   color: black;
   justify-content: flex-start;
   height: 40%;
+  max-height: 312px;
 }
 
 .content {
@@ -71,12 +74,14 @@
 
 .abt {
   padding: 20px 50px 100px 50px;
+  overflow: hidden;
 }
 .col2 {
   display: flex;
   flex-direction: column;
   gap: 1em;
   align-items: center;
+  max-height: 810px;
 }
 .skillgrid {
   display: grid;
