--- a/src/styles/homecontent.css
+++ b/src/styles/homecontent.css
@@ -23,12 +23,14 @@
 .memoji {
   width: 22em;
   height: 23em;
+  background: url("../images/memoji.png");
+  background-size: 100% 100%;
 }
-.homeGrid img {
+/* .homeGrid img {
   width: 100%;
   height: 100%;
   margin: 2.075em 0;
-}
+} */
 .name {
   font-size: 6.5em;
   padding-bottom: 20px;
@@ -52,38 +54,95 @@
   animation: gradientMove 3s linear infinite;
 }
 
-/* @media all and (max-width: 1720px) {
+@media all and (max-width: 375px) {
+  .homeGrid {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    padding-top: 60px;
+  }
   .name {
-    font-size: 75px;
+    font-size: 2.4em;
   }
   .designation {
-    font-size: 55px;
+    font-size: 0.63em;
+    padding-left: 0;
+  }
+  .memoji {
+    width: 15em;
+    height: 15em;
+  }
+  .nameDesig {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
-
-@media all and (max-width: 1720px) {
+@media all and (min-width: 375px) and (max-width: 500px) {
+  .homeGrid {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    padding-top: 60px;
+  }
   .name {
-    font-size: 60px;
+    font-size: 2.5em;
   }
   .designation {
-    font-size: 45px;
+    font-size: 0.69em;
+    padding-left: 0;
+  }
+  .memoji {
+    width: 15em;
+    height: 15em;
+  }
+  .nameDesig {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
-
-@media all and (max-width: 1360px) {
+@media all and (min-width: 501px) and (max-width: 768px) {
+  .homeGrid {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    padding-top: 60px;
+  }
   .name {
-    font-size: 55px;
+    font-size: 3.3em;
   }
   .designation {
-    font-size: 40px;
+    font-size: 0.87em;
+    padding-left: 0;
+  }
+  .memoji {
+    width: 15em;
+    height: 15em;
+  }
+  .nameDesig {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
-
-@media all and (max-width: 1212px) {
+@media all and (min-width: 768px) and (max-width: 1300px) {
+  .homeGrid {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    padding-top: 70px;
+  }
   .name {
-    font-size: 60px;
+    font-size: 4.5em;
   }
   .designation {
-    font-size: 30px;
+    font-size: 1.19em;
+    padding-left: 0;
   }
-} */
+  .nameDesig {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
