--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -55,8 +55,8 @@
   font-size: 2.25em;
 }
 .skillbtn {
-  border: 2px solid #00000020;
-  /* box-shadow: 0 0 0 2px #00000020; */
+  /* border: 2px solid #00000020; */
+  box-shadow: 0 0 0 3px #00000020;
   padding: 16px 5px;
   font-size: 0.6em;
   border-radius: 20px;
@@ -67,6 +67,7 @@
   height: 100%;
   font-weight: 600;
   background-color: #ffffff;
+  color: black;
   position: relative;
   z-index: 0;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
@@ -198,4 +199,67 @@
   background-color: rgb(57, 57, 57);
   backdrop-filter: blur(12px);
   color: white;
+}
+
+@media all and (max-width: 375px) {
+  .container {
+    display: block;
+    align-items: center;
+    padding: 0 10px;
+  }
+  .box {
+    width: 100%;
+  }
+  .content,
+  .box h2 {
+    font-size: 0.98em;
+  }
+  .abt {
+    padding: 20px;
+  }
+  .col2 {
+    padding: 1em 0;
+  }
+  .grid {
+    bottom: 0;
+  }
+  .skillbtn {
+    width: 10em;
+    font-size: 0.5em;
+  }
+  .skillCont,
+  .certCont {
+    padding-bottom: 1em;
+  }
+}
+@media all and (min-width: 376px) and (max-width: 500px) {
+  .container {
+    display: block;
+    align-items: center;
+    padding: 0 10px;
+  }
+  .box {
+    width: 100%;
+  }
+  .content,
+  .box h2 {
+    font-size: 1em;
+  }
+  .abt {
+    padding: 20px;
+  }
+  .col2 {
+    padding: 1em 0;
+  }
+  .grid {
+    bottom: 0;
+  }
+  .skillbtn {
+    width: 10em;
+    font-size: 0.5em;
+  }
+  .skillCont,
+  .certCont {
+    padding-bottom: 1em;
+  }
 }
