--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -35,17 +35,19 @@
   justify-content: center;
 }
 .cg2 {
-  background-color: rgb(0, 0, 0);
+  /* background-color: #212426; */
+  background-color: rgb(28, 28, 30);
   grid-column: 2/2;
   grid-row: 1/1;
-  background-color: rgb(255, 255, 255);
-  color: black;
+  color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
   gap: 1.5em;
   padding: 20px 10px;
+  box-shadow: 0px 4px 4px 0px rgb(0, 0, 0),
+    1px 1px 29.6px 6px rgba(0, 0, 0, 0.546) inset;
 }
 .formGrid {
   display: grid;
@@ -91,16 +93,122 @@ button {
   width: 100%;
   height: 100%;
   text-decoration: none;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
+  box-shadow: 0 0 0.4vw rgba(0, 0, 0, 0.5), 0 0 0 0.15vw transparent;
+  border-radius: 0.4vw;
   border: none;
-  color: white;
   font-size: 1.2em;
+  padding: 0.4vw;
   outline: none;
-  border-radius: 20px;
   padding: 15px;
-  color: white;
+  color: #fff;
+  transition: 0.4s;
 }
-::placeholder {
-  color: #ffffff;
-  opacity: 1;
+textarea.input {
+  resize: none;
+}
+.input:hover {
+  box-shadow: 0 0 0 0.15vw rgba(135, 207, 235, 0.186);
+}
+
+.input:focus {
+  box-shadow: 0 0 0 0.15vw skyblue;
+}
+
+.btn-12,
+.btn-12 *,
+.btn-12 :after,
+.btn-12 :before,
+.btn-12:after,
+.btn-12:before {
+  box-sizing: border-box;
+}
+
+.btn-12 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #000;
+  background-image: none;
+  color: #fff;
+  cursor: pointer;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 100%;
+  font-weight: 900;
+  line-height: 1.5;
+  margin: 0;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.btn-12:disabled {
+  cursor: default;
+}
+
+.btn-12:-moz-focusring {
+  outline: auto;
+}
+
+.btn-12 svg {
+  display: block;
+  vertical-align: middle;
+}
+
+.btn-12 [hidden] {
+  display: none;
+}
+
+.btn-12 {
+  border-radius: 99rem;
+  border-width: 2px;
+  overflow: hidden;
+  padding: 0.8rem 3rem;
+  position: relative;
+  width: 33%;
+  left: 33%;
+  right: 33%;
+}
+
+.btn-12 span {
+  mix-blend-mode: difference;
+}
+
+.btn-12:after,
+.btn-12:before {
+  background: linear-gradient(
+    90deg,
+    #fff 25%,
+    transparent 0,
+    transparent 50%,
+    #fff 0,
+    #fff 75%,
+    transparent 0
+  );
+  content: "";
+  inset: 0;
+  position: absolute;
+  transform: translateY(var(--progress, 100%));
+  transition: transform 0.2s ease;
+}
+
+.btn-12:after {
+  --progress: -100%;
+  background: linear-gradient(
+    90deg,
+    transparent 0,
+    transparent 25%,
+    #fff 0,
+    #fff 50%,
+    transparent 0,
+    transparent 75%,
+    #fff 0
+  );
+  z-index: -1;
+}
+
+.btn-12:hover:after,
+.btn-12:hover:before {
+  --progress: 0;
 }
