--- a/src/styles/homecontent.css
+++ b/src/styles/homecontent.css
@@ -9,7 +9,6 @@
     background-position: 100% 0;
   }
 }
-
 .homeGrid {
   overflow: hidden;
   background-color: #000000;
@@ -18,7 +17,6 @@
   align-items: center;
   justify-content: center;
   height: calc(100svh - 5.6em);
-  /* padding-left: 0.5em; */
 }
 .memoji {
   width: 22em;
@@ -26,13 +24,10 @@
   background: url("../images/memoji.png");
   background-size: 100% 100%;
 }
-/* .homeGrid img {
-  width: 100%;
-  height: 100%;
-  margin: 2.075em 0;
-} */
 .name {
-  font-size: 6.5em;
+  font-size: 3.3em;
+  font-weight: 600;
+  display: flex;
   padding-bottom: 20px;
 }
 .designation {
@@ -61,45 +56,40 @@
     padding-top: 60px;
   }
   .name {
-    font-size: 2.4em;
+    font-size: 1.9em;
+    text-align: center;
+    flex-direction: column;
+    padding-bottom: 20px;
   }
+
   .designation {
-    font-size: 0.63em;
+    font-size: 0.65em;
     padding-left: 0;
   }
   .memoji {
     width: 15em;
     height: 15em;
   }
-  .nameDesig {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
 }
-@media all and (min-width: 375px) and (max-width: 500px) {
+@media all and (min-width: 376px) and (max-width: 500px) {
   .homeGrid {
     flex-direction: column-reverse;
     justify-content: flex-end;
     padding-top: 60px;
   }
   .name {
-    font-size: 2.5em;
+    font-size: 1.9em;
+    text-align: center;
+    flex-direction: column;
+    padding-bottom: 20px;
   }
   .designation {
-    font-size: 0.69em;
+    font-size: 0.65em;
     padding-left: 0;
   }
   .memoji {
     width: 15em;
     height: 15em;
-  }
-  .nameDesig {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
 }
 @media all and (min-width: 501px) and (max-width: 768px) {
@@ -109,7 +99,10 @@
     padding-top: 60px;
   }
   .name {
-    font-size: 3.3em;
+    font-size: 2.5em;
+    text-align: center;
+    flex-direction: column;
+    padding-bottom: 20px;
   }
   .designation {
     font-size: 0.87em;
@@ -133,7 +126,10 @@
     padding-top: 70px;
   }
   .name {
-    font-size: 4.5em;
+    font-size: 3.5em;
+    text-align: center;
+    flex-direction: column;
+    padding-bottom: 20px;
   }
   .designation {
     font-size: 1.19em;
