--- a/src/styles/hoverpage.css
+++ b/src/styles/hoverpage.css
@@ -10,9 +10,36 @@
   font-size: 3.5em;
   font-weight: bold;
 }
+
 .hover h1 {
   background: linear-gradient(to right, #0a00b0 0%, #98b5ff 50%, #360077 100%);
   -webkit-background-clip: text;
   color: transparent;
   display: inline-block;
+}
+@media all and (max-width: 375px) {
+  .hover {
+    font-size: 1.5em;
+  }
+}
+@media all and (min-width: 376px) and (max-width: 500px) {
+  .hover {
+    font-size: 2.5em;
+    text-align: center;
+    flex-direction: column;
+  }
+}
+@media all and (min-width: 501px) and (max-width: 768px) {
+  .hover {
+    font-size: 3.5em;
+    text-align: center;
+    flex-direction: column;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1300px) {
+  .hover {
+    font-size: 3.5em;
+    text-align: center;
+    /* flex-direction: column; */
+  }
 }
