--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -11,7 +11,6 @@
 }
 .box {
   width: 625px;
-  /* height: fit-content; */
   color: white;
   border: 1px solid white;
   font-size: 90%;
@@ -55,7 +54,6 @@
   font-size: 2.25em;
 }
 .skillbtn {
-  /* border: 2px solid #00000020; */
   box-shadow: 0 0 0 3px #00000020;
   padding: 16px 5px;
   font-size: 0.6em;
@@ -93,11 +91,6 @@
   position: relative;
   bottom: -2em;
 }
-.certgrid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 0.5em;
-}
 
 .grid-item {
   transition: all 0.3s ease;
@@ -126,9 +119,16 @@
   display: block;
 }
 .certCont {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.certgrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.5em;
+  width: 100%;
 }
 .skillCont {
   width: 100%;
@@ -137,8 +137,6 @@
   display: flex;
   justify-content: center;
 }
-
-/* Expt grid */
 
 .grid {
   position: relative;
@@ -167,7 +165,6 @@
   align-items: center;
   justify-content: center;
   font-size: 1rem;
-  /* z-index: 1; */
   pointer-events: none;
   opacity: 0;
   transform: scale(0);
