safe commit responsive till work

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -130,7 +130,7 @@ nav .logo {
 
   nav .logo {
     justify-content: flex-start;
-    margin: 0;
+    margin-left: 40px;
   }
 
   .open-sidebar-button,
