--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   background-color: black;
   color: white;
   display: flex;
@@ -258,5 +258,167 @@
   .skillCont,
   .certCont {
     padding-bottom: 1em;
+  }
+} */
+
+/* General styles */
+.container {
+  border: 1px solid rgb(27, 194, 209);
+  color: white;
+  max-width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  gap: 1em;
+}
+.maincont {
+  border: 1px solid red;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center;
+}
+.box {
+  border-radius: 8px;
+  padding: 20px;
+  margin-bottom: 20px;
+  flex: 1;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+/* About section */
+.content {
+  font-size: clamp(1em, 2.3vw, 1.49em);
+  line-height: 1.6;
+}
+.abt {
+  position: relative;
+  top: 12%;
+}
+.about {
+  background: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  max-width: 45%;
+  font-size: 14px;
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 40em;
+}
+
+/* Skills and Certifications layout */
+.col2 {
+  gap: 20px;
+}
+.skills {
+  height: 60%;
+}
+.cert {
+  height: 33%;
+}
+.skills,
+.cert {
+  max-width: 100%;
+  font-size: 14px;
+  flex: 1;
+  background: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+/* Skills grid */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  position: relative;
+}
+
+.button-container {
+  position: relative;
+}
+
+/* Overlay styles */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.overlay.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.overlaymain {
+  text-align: center;
+  padding: 20px;
+}
+
+.heading {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+/* Certification grid */
+.certgrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+@media (max-width: 1100px) {
+  .container {
+    max-width: 100%;
+    display: block;
+    position: relative;
+  }
+  .about {
+    max-width: 100%;
+    height: 50%;
+  }
+
+  .content {
+    font-size: clamp(1.25em, 2.3vw, 1.49em);
+  }
+  .col2 {
+    flex-direction: column;
+  }
+
+  .grid,
+  .certgrid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+/* Responsive styles */
+
+@media (max-width: 480px) {
+  .grid,
+  .certgrid {
+    grid-template-columns: 1fr;
+  }
+  .container {
+    display: block;
+  }
+  .about {
+    max-width: 100%;
   }
 }
