--- a/src/styles/homecontent.css
+++ b/src/styles/homecontent.css
@@ -149,9 +149,8 @@
 /* Experiment */
 
 .homecontent {
-  /* border: 1px solid red; */
+  border: 1px solid red;
 
-  background: black;
   color: white;
   min-height: calc(100svh - 5.6em);
   display: flex;
@@ -159,8 +158,8 @@
   justify-content: center;
 }
 .homeGrid {
-  margin: 0 auto;
-  width: 65%;
+  /* margin: 0 auto; */
+  max-width: 1000px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -175,13 +174,11 @@
   line-height: 3em;
 }
 .designation {
-  font-size: clamp(1rem, 1.3vw, 1.64rem);
+  font-size: clamp(1rem, 1vw, 1.64rem);
 }
 .memoji {
   min-width: 16em;
   min-height: 16em;
-  /* height: 100%; */
-
   margin: 0 auto;
 }
 .memoji img {
