--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,5 @@
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  /* background-color: #000000; */
+  background-color: #000000;
 }
