Errors resolved, shader gradient working

--- a/src/styles/Explore/landing.css
+++ b/src/styles/Explore/landing.css
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
-  background-color: black;
+  /* background-color: black; */
 }
 .landing {
   display: grid;
