--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,5 @@
 .contactCont {
-  background-color: black;
+  /* background-color: black; */
   color: white;
   display: flex;
   flex-direction: column;
