--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -20,7 +20,7 @@
 }
 
 .hint {
-  background-color: black;
+  /* background-color: black; */
   color: white;
   text-align: center;
   font-weight: 100;
