--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,5 +1,5 @@
 .workContainer {
-  background-color: black;
+  /* background-color: black; */
   display: flex;
   flex-direction: column;
   align-items: center;
