--- a/src/styles/Explore/userpersonas.css
+++ b/src/styles/Explore/userpersonas.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: black;
+  /* background-color: black; */
 }
 .personaGrid {
   display: grid;
