--- a/src/styles/homecontent.css
+++ b/src/styles/homecontent.css
@@ -11,7 +11,7 @@
 }
 .homeGrid {
   overflow: hidden;
-  background-color: #000000;
+  /* background-color: #000000; */
   font-size: 1em;
   display: flex;
   align-items: center;
