--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,6 @@
 nav {
   height: 90px;
-  background-color: #000000;
+  /* background-color: #000000; */
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
