--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,30 +1,40 @@
 .contactCont {
-  /* background-color: black; */
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 2em;
+  margin: 0 auto;
+  border: 2px solid purple;
+  min-height: 100vh;
 }
+
+.heading h1 {
+  font-size: clamp(1.5em, 5vw, 2.5em);
+  margin-bottom: 1em;
+}
+
 .contactGrid {
   display: grid;
-  grid-template-columns: repeat(2, 629px);
-  grid-template-rows: repeat(1, 600px);
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
   gap: 1em;
-}
-.contactGridItem {
   width: 100%;
-  height: 100%;
+  max-width: 1300px;
+}
+
+.contactGridItem {
   border-radius: 20px;
+  min-height: 400px;
 }
+
 .contactContent {
-  font-size: 2.6em;
+  font-size: clamp(1.5em, 3vw, 2.6em);
   font-weight: 500;
-  padding: 0 50px;
+  padding: 1em;
 }
+
 .cg1 {
-  grid-column: 1/1;
-  grid-row: 1/1;
   background: linear-gradient(
     to bottom,
     #070497 0%,
@@ -34,59 +44,55 @@
   align-items: center;
   justify-content: center;
 }
+
+.contact_heading {
+  font-size: 28px;
+}
+
 .cg2 {
-  /* background-color: #212426; */
   background-color: rgb(28, 28, 30);
-  grid-column: 2/2;
-  grid-row: 1/1;
   color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
   gap: 1.5em;
-  padding: 20px 10px;
+  padding: 20px;
   box-shadow: 0px 4px 4px 0px rgb(0, 0, 0),
     1px 1px 29.6px 6px rgba(0, 0, 0, 0.546) inset;
 }
+
+.cg2 h1 {
+  font-size: clamp(1.5em, 4vw, 2.5em);
+}
+
 .formGrid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(8, 50px);
-  row-gap: 0.9em;
-  column-gap: 1em;
+  gap: 1em;
   width: 100%;
 }
+
 .touchGridItem {
   border-radius: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
 }
-.fname {
-  grid-column: 1/2;
-  grid-row: 1/1;
-  width: 100%;
-}
+
+.fname,
 .lname {
-  grid-column: 2/2;
-  grid-row: 1/1;
-  width: 100%;
+  grid-column: span 1;
 }
-.email {
-  grid-column: 1/3;
-}
-.phone {
-  grid-column: 1/3;
-}
-.message {
-  grid-column: 1/3;
-  grid-row: 4/8;
-}
+
+.email,
+.phone,
+.message,
 .submit {
-  grid-column: 1/3;
-  grid-row: 8/8;
+  grid-column: 1 / -1;
 }
+
+.submit {
+  display: flex;
+}
+
 input,
 textarea,
 button {
@@ -104,9 +110,11 @@ button {
   color: #fff;
   transition: 0.4s;
 }
+
 textarea.input {
   resize: none;
 }
+
 .input:hover {
   box-shadow: 0 0 0 0.15vw rgba(135, 207, 235, 0.186);
 }
@@ -125,6 +133,13 @@ textarea.input {
 }
 
 .btn-12 {
+  border-radius: 99rem;
+  border-width: 2px;
+  overflow: hidden;
+  position: relative;
+  width: 33%;
+  left: 33%;
+  right: 33%;
   -webkit-tap-highlight-color: transparent;
   -webkit-appearance: button;
   background-color: #000;
@@ -139,7 +154,7 @@ textarea.input {
   line-height: 1.5;
   margin: 0;
   -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
-  padding: 0;
+  padding: 10;
   text-transform: uppercase;
 }
 
@@ -158,17 +173,6 @@ textarea.input {
 
 .btn-12 [hidden] {
   display: none;
-}
-
-.btn-12 {
-  border-radius: 99rem;
-  border-width: 2px;
-  overflow: hidden;
-  padding: 0.8rem 3rem;
-  position: relative;
-  width: 33%;
-  left: 33%;
-  right: 33%;
 }
 
 .btn-12 span {
@@ -211,4 +215,37 @@ textarea.input {
 .btn-12:hover:after,
 .btn-12:hover:before {
   --progress: 0;
+}
+
+@media (max-width: 768px) {
+  .contactGrid {
+    grid-template-columns: 1fr;
+  }
+
+  .contactGridItem {
+    min-height: 300px;
+  }
+
+  .formGrid {
+    grid-template-columns: 1fr;
+  }
+
+  .fname,
+  .lname {
+    grid-column: 1 / -1;
+  }
+}
+
+@media (max-width: 480px) {
+  .contactCont {
+    padding: 1em;
+  }
+
+  .contactGridItem {
+    min-height: 200px;
+  }
+
+  .btn-12 {
+    max-width: 180px;
+  }
 }
