--- a/src/styles/Explore/landing.css
+++ b/src/styles/Explore/landing.css
@@ -15,7 +15,7 @@
   padding: clamp(20px, 5vw, 50px);
   /* background-color: black; */
   min-height: 100vh;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .landing {
