--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -261,9 +261,7 @@
   }
 } */
 
-/* General styles */
 .container {
-  /* border: 1px solid rgb(27, 194, 209); */
   color: white;
   max-width: 1650px;
   margin: 0 auto;
@@ -273,7 +271,6 @@
   gap: 1em;
 }
 .maincont {
-  /* border: 1px solid red; */
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -290,7 +287,6 @@ h2 {
   margin-bottom: 15px;
 }
 
-/* About section */
 .content {
   font-size: clamp(14px, 5vw, 22px);
   line-height: 1.6;
@@ -317,7 +313,6 @@ h2 {
   height: 40em;
 }
 
-/* Skills and Certifications layout */
 .col2 {
   gap: 20px;
 }
@@ -337,7 +332,6 @@ h2 {
   -webkit-backdrop-filter: blur(5px);
 }
 
-/* Skills grid */
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -349,7 +343,18 @@ h2 {
   position: relative;
 }
 
-/* Overlay styles */
+.heading {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.certgrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -357,37 +362,48 @@ h2 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 0 0 0 3px #00000020;
   color: white;
   display: flex;
-  justify-content: center;
   align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  justify-content: center;
+  font-size: 1rem;
   pointer-events: none;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.3s ease-in-out, transform 0.3s cubic-bezier(0.175, 0.585, 0.32, 1.175),
+    backdrop-filter 0.5s ease-in-out;
+  border-radius: 15px;
 }
 
 .overlay.visible {
   opacity: 1;
-  pointer-events: auto;
+  transform: scale(1);
+  backdrop-filter: blur(15px);
 }
 
 .overlaymain {
   text-align: center;
-  padding: 20px;
 }
 
-.heading {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
+.overlayContent {
+  font-size: 1rem;
+}
+.skillbtn:hover {
+  background-color: rgba(45, 45, 45, 0.1);
+  backdrop-filter: blur(12px);
+  color: white;
+  cursor: pointer;
 }
 
-/* Certification grid */
+.grid,
 .certgrid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  position: relative;
+  bottom: -10px;
 }
+
 @media (max-width: 1100px) {
   .container {
     max-width: 100%;
@@ -411,7 +427,6 @@ h2 {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-/* Responsive styles */
 
 @media (max-width: 480px) {
   .grid,
