Hover effect on cards added

--- a/src/styles/Explore/landing.css
+++ b/src/styles/Explore/landing.css
@@ -1,8 +1,10 @@
 @keyframes moveIcon {
+
   0%,
   100% {
     transform: translateX(-8px);
   }
+
   50% {
     transform: translateX(-2px);
   }
@@ -11,11 +13,11 @@
 .landingContainer {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   padding: clamp(20px, 5vw, 50px);
-  /* background-color: black; */
   min-height: 100vh;
-  /* border: 1px solid red; */
+  gap: 2em;
 }
 
 .landing {
@@ -27,25 +29,100 @@
 }
 
 .secLandingItem {
-  border-radius: 20px;
+  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: clamp(20px, 4vw, 60px);
   min-height: 200px;
+  position: relative;
+  /* background-color: #2a2a2a; */
+  overflow: hidden;
+}
+
+.objContent,
+.summaryContent {
+  background: rgba(255, 255, 255, 0.1);
+  color: white;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  font-size: clamp(14px, 2vw, 20px);
+  position: relative;
+  border: 2px solid transparent;
+  /* Add a transparent border */
+  overflow: hidden;
+  /* Ensure highlights don't exceed container bounds */
+}
+
+.torch-container {
+  position: absolute;
+  top: -50px;
+  left: -50px;
+  right: -50px;
+  bottom: -50px;
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.torch {
+  position: absolute;
+  width: 1000px;
+  height: 1000px;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0) 70%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.border-highlight {
+  position: absolute;
+  pointer-events: none;
+  /* transition: opacity 0.3s ease, background 0.3s ease; */
+}
+
+.border-highlight-top,
+.border-highlight-bottom {
+  height: 2px;
+  width: 100%;
+  left: 0;
+}
+
+.border-highlight-left,
+.border-highlight-right {
+  width: 2px;
+  height: 100%;
+  top: 0;
+}
+
+.border-highlight-top {
+  top: 0;
+}
+
+.border-highlight-bottom {
+  bottom: 0;
+}
+
+.border-highlight-left {
+  left: 0;
+}
+
+.border-highlight-right {
+  right: 0;
+}
+
+
+.landing_heading {
+  color: white;
+  font-weight: 700;
+  font-size: clamp(24px, 5vw, 48px);
 }
 
 .summary,
 .obj {
-  background-color: white;
-  font-size: clamp(1.5em, 3vw, 2em);
-}
-
-.summaryContent,
-.objContent {
-  border: 2px solid white;
   color: white;
-  font-size: clamp(1em, 2vw, 1.5em);
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  font-size: clamp(1.5em, 3vw, 2em);
 }
 
 .objContent ul {
@@ -65,14 +142,13 @@
   padding: 10px;
   font-size: clamp(1em, 2vw, 1.5em);
   width: 100%;
-  cursor: pointer;
   height: 50px;
   white-space: nowrap;
 }
 
 .landButton svg {
-  fill: black;
-  stroke: black;
+  fill: rgb(255, 255, 255);
+  stroke: rgb(255, 255, 255);
   stroke-width: 1;
   height: 30px;
   width: 30px;
