ACE-1 Added bg border highlight, routing all pages, responsive home and hoverpage, Intro black delayed animation

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,6 +1,11 @@
 .light {
   position: relative;
 }
+
+.preloader {
+  position: relative;
+}
+
 .light::after {
   content: "";
   position: absolute;
@@ -9,14 +14,12 @@
   height: 100%;
   width: 100%;
   pointer-events: none;
-  background: radial-gradient(
-    circle at var(--x, 50%) var(--y, 50%),
-    transparent 1%,
-    rgba(0, 0, 0, 0) 8%,
-    rgba(0, 0, 0, 0) 15%,
-    rgba(0, 0, 0, 0) 35%,
-    rgba(0, 0, 1, 0) 40%
-  );
+  background: radial-gradient(circle at var(--x, 50%) var(--y, 50%),
+      transparent 1%,
+      rgba(0, 0, 0, 0) 8%,
+      rgba(0, 0, 0, 0) 15%,
+      rgba(0, 0, 0, 0) 35%,
+      rgba(0, 0, 1, 0) 40%);
 }
 
 .hint {
@@ -31,30 +34,37 @@
   .light::after {
     background: none;
   }
+
   .hint {
     display: none;
   }
 }
+
 @media all and (min-width: 376px) and (max-width: 500px) {
   .light::after {
     background: none;
   }
+
   .hint {
     display: none;
   }
 }
+
 @media all and (min-width: 501px) and (max-width: 768px) {
   .light::after {
     background: none;
   }
+
   .hint {
     display: none;
   }
 }
+
 @media all and (min-width: 768px) and (max-width: 1300px) {
   .light::after {
     background: none;
   }
+
   .hint {
     display: none;
   }
