--- a/src/styles/hoverpage.css
+++ b/src/styles/hoverpage.css
@@ -1,45 +1,36 @@
 .main {
-  /* background-color: #000000; */
   color: white;
+  max-width: 1300px;
+  margin: 0 auto;
 }
+
 .hover {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100svh;
-  font-size: 3.5em;
+  font-size: 48px;
   font-weight: bold;
+  padding: 1rem;
+  text-align: center;
 }
 
 .hover h1 {
   background: linear-gradient(to right, #0a00b0 0%, #98b5ff 50%, #360077 100%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   display: inline-block;
 }
-@media all and (max-width: 375px) {
+
+@media (max-width: 768px) {
   .hover {
-    font-size: 1.5em;
+    font-size: 36px;
   }
 }
-@media all and (min-width: 376px) and (max-width: 500px) {
+
+@media (max-width: 480px) {
   .hover {
-    font-size: 2.5em;
-    text-align: center;
-    flex-direction: column;
-  }
-}
-@media all and (min-width: 501px) and (max-width: 768px) {
-  .hover {
-    font-size: 3.5em;
-    text-align: center;
-    flex-direction: column;
-  }
-}
-@media all and (min-width: 768px) and (max-width: 1300px) {
-  .hover {
-    font-size: 3.5em;
-    text-align: center;
-    /* flex-direction: column; */
+    font-size: 30px;
   }
 }
