--- a/src/styles/Explore/userpersonas.css
+++ b/src/styles/Explore/userpersonas.css
@@ -27,11 +27,22 @@
 }
 
 .personaGridItem {
-  border-radius: 16px;
+  border-radius: 8px;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   padding: 1em;
+}
+
+.techImgs {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  gap: 4em;
+}
+
+.techImgs svg {
+  fill: white;
 }
 
 .head {
@@ -82,7 +93,7 @@
 .dmg,
 .tech {
   background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 16px;
+  border-radius: 8px;
   padding: 1em;
 }
 
