--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,96 +1,3 @@
-/* .workContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 200svh;
-  gap: 1em;
-}
-
-.heading {
-  color: white;
-  font-size: 2em;
-}
-.workgrid {
-  display: grid;
-  grid-template-columns: repeat(2, 629px);
-  grid-template-rows: repeat(54, 10px);
-  gap: 1em;
-}
-.work-grid-item {
-  border-radius: 20px;
-  font-weight: bold;
-}
-.g1 {
-  grid-column: 1 / 1;
-  grid-row: 3 /25;
-  background-image: url("../images/security_image.png");
-  background-size: 100% 100%;
-}
-.g2 {
-  grid-column: 2/2;
-  grid-row: 1/27;
-  background-color: #a7cffd;
-}
-
-.g3 {
-  grid-column: 1/1;
-  grid-row: 27/53;
-  background-color: #a7cffd;
-}
-.g4 {
-  grid-column: 2 / 2;
-  grid-row: 29 / 51;
-  background-image: url("../images/udemy.jpg");
-  background-size: 100% 100%;
-}
-.g2,
-.g3 {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 4em;
-}
-.work-heading {
-  text-align: center;
-  font-size: 3.5em;
-}
-
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 60px;
-  padding: 10px 10px;
-  border: 2px double rgb(76, 75, 75);
-  font-size: 1.5em;
-  width: 100%;
-  cursor: pointer;
-  height: 50px;
-}
-.button svg {
-  fill: black;
-  stroke: black;
-  stroke-width: 2;
-  height: 19px;
-  width: 20px;
-  margin-left: 15px;
-  animation: moveIcon 2s infinite;
-}
-@keyframes moveIcon {
-  0% {
-    transform: translateX(-8px);
-  }
-  50% {
-    transform: translateX(-2px);
-  }
-  100% {
-    transform: translateX(-8px);
-  }
-} */
-
 .workContainer {
   display: flex;
   flex-direction: column;
@@ -108,6 +15,7 @@
   color: white;
   font-weight: 700;
   font-size: clamp(24px, 5vw, 48px);
+  margin-bottom: 3rem;
 }
 
 .workgrid {
@@ -119,7 +27,7 @@
 }
 
 .work-grid-item {
-  border-radius: 16px;
+  border-radius: 8px;
   font-weight: bold;
   min-height: 400px;
 }
@@ -152,7 +60,7 @@
 .imgcontent img {
   height: 100%;
   width: 100%;
-  border-radius: 16px;
+  border-radius: 8px;
 }
 
 .button {
